@@ -6970,4 +6970,9 @@ No match
     XABC\B
 No match
 
+/(?m)^$/<any>g+
+    abc\r\n\r\n
+ 0: 
+ 0+ \x0d\x0a
+
 / End of testinput7 /
